--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spectral Commune</title>
+    <title>Haunted Cord</title>
     <meta name="description" content="A modern Discord-like communication platform" />
-    <meta name="author" content="Spectral Commune" />
+    <meta name="author" content="Haunted Cord" />
 
-    <meta property="og:title" content="Spectral Commune" />
+    <meta property="og:title" content="Haunted Cord" />
     <meta property="og:description" content="A modern Discord-like communication platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@SpectralCommune" />
+    <meta name="twitter:site" content="@Haunted Cord" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
