Update all files

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haunted Cord</title>
-    <meta name="description" content="A modern Discord-like communication platform" />
+    <meta name="description" content="A dark Discord-like communication platform" />
     <meta name="author" content="Haunted Cord" />
 
     <meta property="og:title" content="Haunted Cord" />
-    <meta property="og:description" content="A modern Discord-like communication platform" />
+    <meta property="og:description" content="A dark Discord-like communication platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://preview.redd.it/harold-4k-png-v0-b01zxg150zt81.png?width=640&crop=smart&auto=webp&s=c1b66d012695f1b68518a74af96feaa683bd9fed" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Haunted Cord" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@HauntedCord" />
+    <meta name="twitter:image" content="https://preview.redd.it/harold-4k-png-v0-b01zxg150zt81.png?width=640&crop=smart&auto=webp&s=c1b66d012695f1b68518a74af96feaa683bd9fed" />
   </head>
 
   <body>
